--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-Do List</title>
+    <script src="index.js"></script>
   </head>
   <body>
-    
+    <div class="todo">
+      <h2>Title</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius sint sapiente commodi quam
+        repudiandae quia voluptatibus ex atque? Voluptates, omnis?
+      </p>
+      <p>isComplete? TRUE</p>
+      <p>Due: DATE</p>
+      <button>EDIT</button>
+      <button>DELETE</button>
+    </div>
   </body>
 </html>
