adds initial navbar

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,15 @@
     <title>To-Do List</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><h1>Todo List</h1></li>
+        <li>Link 1</li>
+        <li>Link 2</li>
+        <li>Link 3</li>
+        <li>Link 4</li>
+      </ul>
+    </nav>
     <div class="todo">
       <h2>Title</h2>
       <p>
