changes folder structure; renames element factories to not have 'Elem' suffix; adds addTodoClickDiv element

--- a/src/index.html
+++ b/src/index.html
@@ -55,14 +55,8 @@
     </nav>
     <main>
       <div><h1>Project Name</h1></div>
-      <div class="todos-container">
-        <div class="menu-item" style="justify-content: flex-start; gap: 16px">
-          <i class="fa-solid fa-plus clickable"></i>Add Todo
-        </div>
-      </div>
-      <div class="form-container">
-        
-      </div>
+      <div class="todos-container"></div>
+      <div class="form-container"></div>
     </main>
   </body>
 </html>
