adds add project element factory; updates displayController.setProjectMenuItems()

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
       <h1><i class="fa-solid fa-list-check"></i>Todo List</h1>
     </header>
     <nav class="side-nav">
+      <h1>Home</h1>
       <div id="project-filters-container" class="menu-items-container">
-        <h1>Home</h1>
         <div class="menu-item menu-item-active">
           <i class="fa-solid fa-list-check"></i>All Tasks
         </div>
@@ -31,11 +31,8 @@
         </div>
         <div class="menu-item"><i class="fa-solid fa-star"></i>Starred</div>
       </div>
-      <div id="project-menu-items-container" class="menu-items-container">
-        <h1>Projects</h1>
-
-        <div class="menu-item"><i class="fa-solid fa-plus"></i>Add Project</div>
-      </div>
+      <h1>Projects</h1>
+      <div id="project-menu-items-container" class="menu-items-container"></div>
 
       <div class="menu-item menu-item-form">
         <div><i class="fa-solid fa-list-check"></i><input type="text" /></div>
