adds addProjectForm element

--- a/src/index.html
+++ b/src/index.html
@@ -34,13 +34,8 @@
       <h1>Projects</h1>
       <div id="project-menu-items-container" class="menu-items-container"></div>
 
-      <div class="menu-item menu-item-form">
-        <div><i class="fa-solid fa-list-check"></i><input type="text" /></div>
-        <div>
-          <button class="button-green">Add</button
-          ><button class="button-red">Cancel</button>
-        </div>
-      </div>
+      <!-- add project menu item form -->
+
       <div class="menu-item-options-popup">
         <button class="button-green">Rename</button>
         <button class="button-red">Delete</button>
