adds due this week filter

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           <i class="fa-solid fa-calendar-day"></i>Due Today
         </div>
         <div id="due-this-week-todos-menu-item" class="menu-item">
-          <i class="fa-solid fa-calendar-week"></i>Due this Week
+          <i class="fa-solid fa-calendar-week"></i>Due This Week
         </div>
         <div id="starred-todos-menu-item" class="menu-item">
           <i class="fa-solid fa-star"></i>Starred
