adds setTodoFilterMenuItems to UI.js

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <nav class="side-nav">
       <h1>Todo Filters</h1>
       <div id="project-filters-container" class="menu-items-container">
-        <div id="all-todos-menu-item" class="menu-item">
+        <!-- <div id="all-todos-menu-item" class="menu-item">
           <i class="fa-solid fa-list-check"></i>All Todos
         </div>
         <div id="due-today-todos-menu-item" class="menu-item">
@@ -31,7 +31,7 @@
         </div>
         <div id="starred-todos-menu-item" class="menu-item">
           <i class="fa-solid fa-star"></i>Starred
-        </div>
+        </div> -->
       </div>
       <h1>Projects</h1>
       <div id="project-menu-items-container" class="menu-items-container"></div>
